<resources>
    <string name="app_name">LQWaWa</string>
    <string name="contacts">Contacts</string>
    <string name="wawatv">Happy Learning</string>
    <string name="createspace">LQ Tool</string>
    <string name="personal_space">Me</string>
    <string name="personal_resource_library">Personal Courses</string>
    <string name="local_course_task">Local Course</string>
    <string name="load_platform_outline">Reference platform outline</string>
    <string name="register">Sign Up</string>
    <string name="login">Log In</string>
    <string name="meet_problem">Any questions, contact&#160;</string>
    <string name="exit">Log Out</string>
    <string name="forgot_password">Forgot password</string>
    <string name="username">Username</string>
    <string name="username_hint">Username(letters &amp; digits only)</string>
    <string name="password">Password</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="dad">Dad</string>
    <string name="mum">Mum</string>
    <string name="mailbox">Email Address</string>
    <string name="mailbox_register">Email (optional), for recovering password</string>
    <string name="mailbox_info">*Recommend to fill in (necessary for retrieving password).</string>
    <string name="send">Send</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_account">Username</string>
    <string name="user_account_hint">Please input 3 to 20 letters or letters+digits</string>
    <string name="real_name">Real Name</string>
    <string name="bind_phone_number">Bound Mobile Phone</string>
    <string name="contact_phone">Telephone</string>
    <string name="sex">Gender</string>
    <string name="birthday">Birth Date</string>
    <string name="role_info">Role Info</string>
    <string name="add_role">Add Role</string>
    <string name="about_wawatong">About</string>
    <string name="wawachat_intro">LQWaWa Introduction</string>
    <string name="wawachat_agency">Join Us</string>
    <string name="enter_wawachat">Join LQWaWa</string>
    <string name="share_to">Share</string>
    <string name="share">Share</string>
    <string name="collection">Favorite</string>
    <string name="role">Role</string>
    <string name="school">School</string>
    <string name="bind_parent">Bind Parent</string>
    <string name="add_parent">Add Parent</string>
    <string name="bind">Bind</string>
    <string name="apply">*Apply</string>
    <string name="absolve">*Unbind</string>
    <string name="unbind">Unbind</string>
    <string name="reset_password">Reset Password</string>
    <string name="setting">Settings</string>
    <string name="qrcode">QR Code</string>
    <string name="modify_password">Change Password</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_hint_text">Please enter your feedback, we will continue to optimize the
        experience (Less than 200 words)
    </string>
    <string name="input_old_password">Enter old password</string>
    <string name="input_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="different_password">Passwords do not match</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="pls_input_username">Please enter your username</string>
    <string name="pls_input_password">Please enter your password</string>
    <string name="pls_input_email">Please enter your email address</string>
    <string name="pls_input_realname">Please enter your real name</string>
    <string name="login_success">Login succeeded!</string>
    <string name="wrong_email_format">Invalid email address</string>
    <string name="password_not_same">Passwords do not match</string>
    <string name="register_success">Registration succeeded</string>
    <string name="wrong_phone_number">Invalid mobile number</string>
    <string name="modify_password_success">Password changed!</string>
    <string name="uploading">Uploading...</string>
    <string name="parent_account">Parent\'s account</string>
    <string name="parent_name">Parent\'s name</string>
    <string name="pls_input_parent_account">Please enter parent\'s account</string>
    <string name="pls_input_parent_name">Please enter parent\'s name</string>
    <string name="email_send_success">Email has been sent, please check!</string>
    <string name="pls_input_feedback">Please enter your feedback</string>
    <string name="feedback_send_success">Feedback succeeded</string>
    <string name="network_error">Network error</string>
    <string name="delete">Delete</string>
    <string name="add">Join</string>
    <string name="qrcode_scanning">Scan</string>
    <string name="user_qrcode">User QR Code</string>
    <string name="name">Name</string>
    <string name="input_rename_illegal">Input rename illegal</string>
    <string name="remark">Remark</string>
    <string name="personal_qrcode">Personal QR Code</string>
    <string name="accept">Accept</string>
    <string name="pass">Approve</string>
    <string name="passed">Approved</string>
    <string name="added">Added</string>
    <string name="refuse">Decline</string>
    <string name="refused">Declined</string>
    <string name="search">Search</string>
    <string name="pls_enter_keyword">Please enter keyword</string>
    <string name="screening">Filter</string>
    <string name="pls_enter_search_keyword">Please enter keyword to search</string>
    <string name="no_data">No data</string>
    <string name="attention_one_oriza">Followed %s!</string>
    <string name="no_more_data">No more data</string>
    <string name="search_account">Search Account</string>
    <string name="school_name">Please enter school name</string>
    <string name="new_friends">New friend</string>
    <string name="add_friend">Add friend</string>
    <string name="participate_class">Join Class</string>
    <string name="personal_info">My Info</string>
    <string name="personal_materials">My Profile</string>
    <string name="school_qrcode">School QR code</string>
    <string name="class_qrcode">Class QR code</string>
    <string name="contacts_info">Contacts info</string>
    <string name="assign_homework">Assign homework</string>
    <string name="scan_task">Scan to identify tasks</string>
    <string name="resource_not_exist">Course not exists!</string>
    <string name="student_info">Student Info</string>
    <string name="teacher_info">Teacher Info</string>
    <string name="parent_info">Parent Info</string>
    <string name="approve">Approve</string>
    <string name="select_all">Select all</string>
    <string name="confirm_to_delete_friend">Do you want to remove %s from Contacts?</string>
    <string name="delete_friend_success">Deletion succeeded</string>
    <string name="remark_friend_success">Remark successfully</string>
    <string name="friend_request_agreed">Friend request was accepted</string>
    <string name="friend_request_refused">Friend request was declined</string>
    <string name="confirm">Confirm</string>
    <string name="entry_info_detail">
        &#160;1.Competitors must take part in person and are not permitted to delegate to
        others.\n\n
        2.Information in the work declaration form can not be modified after the announcement of the
        shortlist for nationwide final competition. Works in finalists shall not be modified or
        replaced.\n\n
        3.Works of a foreign language should be presented and explained in mandarin (Excluding in
        necessary teaching and competing steps).\n\n
        4.The award-winning works in other competitions are not acceptable.\n\n
        5.All works must be created by the authors who shall confirm that they have exclusive
        copyrights for their works. Work content must be positive, should not violate national
        policies and legal rules and the length shall not be less than 30 seconds.\n
        Competitors shall not borrow/copy other person\'s works. Those who violate the
        above-mentioned rules, once found, will immediately invalidate their qualifications for
        competition joining and prize-winning. Any legal dispute thus incurred shall be borne by the
        authors themselves.\n
        All relevant units will be informed as well.\n\n
        6.Competitors agree that the organizing committee enjoys the use rights for their works and
        can exhibit and spread them in any form.
    </string>
    <string name="entry_info">【Competition regulation】</string>
    <string name="noc_agree_join_info">I have read and agree to the items mentioned above</string>
    <string name="str_ok">OK</string>
    <string name="i_see">I See</string>
    <string name="read_course">Read Course</string>
    <string name="record_course">Record Course</string>
    <string name="str__delete_from_this_class">Remove from Current Class</string>
    <string name="str__delete_from_all_class">Remove from All Classes</string>
    <string name="str_delete_online_list_data_title">Remove live stream from current class or all classes?</string>
    <string name="making_course">Create courseware</string>
    <string name="making_course_tips">
        1. Touch the Record button above, then use the tools to create, finally, touch the End button to save or share with friends.\n\n
        2. It is recommended to use an LQ handwriting tablet for better writing experience.
        Please touch the Connect button at the upper right corner to connect and write with the tablet in ease.</string>
    <string name="no_more_tips">Do not show again</string>
    <string name="str_make_task_order_answer_tips">
        1. Please enter your answer in the dotted box to ensure the answer is valid.\n\n2. Please enter in strict accordance with English writing standards under English input, such as entering \' under English input, leaving a space between words, etc.
    </string>
    <string name="str_task_order_handwriting_tips">It is recommended to use an LQ handwriting tablet for more efficient writing experience.</string>
    <string name="str_begin_to_answer">Answer Now</string>
    <string name="str_intro_of_answer_question">Guidelines</string>
    <string name="str_start_time_point">Start Time</string>
    <string name="str_publish_task_time">Submission Time</string>
    <string name="str_third_login_tip0">WeChat/QQ authorization succeeded, a new LQWaWa account generated</string>
    <string name="str_thrid_login_tip1">Please change password in Me > Profile after login</string>
    <string name="str_tip_account">Your LQWaWa account: %s</string>
    <string name="str_tip_password">Initial password: %s</string>
    <string name="str_check_mark_way">Select remark method</string>
    <string name="str_point_reading_tips">Can add audio, write on sheet, etc.</string>
    <string name="str_record_course_tips">Can record the whole marking process, add explanation, write on sheet, etc.</string>
    <string name="str_assistant_model_title">Enable tutorial mode</string>
    <string name="str_assistant_dialog_tips">Please select subject in Me > Subject Setting or select courses you are good at in Multilanguage and Domestic Course modules to act as a tutor. Enter Tutor Space to solve puzzles for students.</string>
    <string name="str_student_look_other_work">Visible to others</string>
    <string name="str_can_read">Visible to Students</string>
    <string name="str_no_read">Invisible to Students</string>
    <string name="str_publish_right_now">Answer at Any Time</string>
    <string name="str_publish_according_to_time">Answer After Start</string>
</resources>