<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/bg_assistant_check_mark"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/separate_20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="@string/str_check_mark_way"
            android:textColor="@color/text_black"
            android:textSize="16sp"/>

        <RadioButton
            android:id="@+id/rb_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@drawable/com_checkbox"
            android:checked="true"
            android:padding="10dp"
            android:text="@string/read_course"
            android:textColor="@color/text_black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center|left"
            android:text="@string/str_point_reading_tips"
            android:textColor="@color/text_dark_gray"
            android:textSize="14sp"/>

        <RadioButton
            android:id="@+id/rb_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:button="@drawable/com_checkbox"
            android:checked="false"
            android:padding="10dp"
            android:text="@string/record_course"
            android:textColor="@color/text_black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:gravity="center|left"
            android:text="@string/str_record_course_tips"
            android:textColor="@color/text_dark_gray"
            android:textSize="14sp"/>

    </LinearLayout>


    <ImageView
        style="@style/line_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/separate_20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/text_black"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/contacts_dialog_button_seperator"
            style="@style/line_gray"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="@color/text_black"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>