<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_white"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <!--开始时间-->
        <LinearLayout
            android:id="@+id/ll_show_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:orientation="horizontal">

            <TextView
                style="@style/txt_wawa_big_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_start_time_point"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_publish_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center|right"
                android:textColor="@color/text_normal"
                android:textSize="16sp"/>

        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/line_gray"/>

        <!--选择任务发布的时间-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--选择任务发布的时间-->
            <TextView
                style="@style/txt_wawa_big_black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/str_publish_task_time"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_publish_right_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/com_checkbox"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/str_publish_right_now"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"/>

                <RadioButton
                    android:id="@+id/rb_publish_according_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:button="@drawable/com_checkbox"
                    android:padding="10dp"
                    android:text="@string/str_publish_according_to_time"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"/>
            </RadioGroup>


        </LinearLayout>

        <!--选择学生是否可以查看-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--选择任务发布的时间-->
            <TextView
                style="@style/txt_wawa_big_black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:visibility="gone"
                android:text="@string/str_student_look_other_work"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_can_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/com_checkbox"
                    android:checked="true"
                    android:padding="10dp"
                    android:text="@string/str_can_read"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"/>

                <RadioButton
                    android:id="@+id/rb_not_read"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:button="@drawable/com_checkbox"
                    android:padding="10dp"
                    android:text="@string/str_no_read"
                    android:textColor="@color/text_black"
                    android:textSize="14sp"/>
            </RadioGroup>


        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>